// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaImage styled default props 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  background-repeat: no-repeat,repeat;
  background-position: center,center;
  background-size: contain,auto;
}

<div
  className="c0"
/>
`;

exports[`MediaImage styled fadeIn=true 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  background-repeat: no-repeat,repeat;
  background-position: center,center;
  background-size: contain,auto;
  -webkit-animation: bcCCNc .3s cubic-bezier(0.645,0.045,0.355,1);
  animation: bcCCNc .3s cubic-bezier(0.645,0.045,0.355,1);
}

<div
  className="c0"
/>
`;

exports[`MediaImage styled isCropped=true 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  background-repeat: no-repeat,repeat;
  background-position: center,center;
  background-size: contain,auto;
  background-size: cover,auto;
}

<div
  className="c0"
/>
`;
